# multi_agent_playground

./: .env  .gitignore  .zshrc  CHAT_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLEANUP_PLAN.md  DESIGN.md  FEEDBACK.md  GODOT_R_KEY_SIMULATION_TEST_RESULTS.md  LICENSE  Multi-Agent-Playground-Comprehensive-Design-Document.md  README.md  REFACTOR_PHASE_7_PLAN.md  TILE_REMOVAL_SUMMARY.md  debug.md  debug_character_creation.py  debug_match_item.py  instructions.md  pause_game.py  pyproject.toml  pyrightconfig.json  python_check_debug.txt  quick_test.py  requirements.txt  resume_game.py  run_agent_tests.py  run_manual_debug.py  verify_tile_removal.py
.claude/: pyright_errors.json  settings.local.json
backend/: CLAUDE.md  README.md  __init__.py  __main__.py  agent.py  agent_manager.py  example.json  game_controller.py  game_loop.py  kani_test.py  log_config.py  logging.py  main.py  memory_test.py  path_finder.py  test_backend.py  test_godot_r_key_simulation.py  text_game_demo.py  text_test.py  utils.py
data/: CLAUDE.md
docs/: ARUSH_LLM_DESIGN_DOCUMENT.md  BACKEND_SERVER_OPERATIONAL_SUMMARY.md  CHARACTER_AGENT_TO_ARUSH_LLM_MIGRATION.md  CLAUDE.md  FRONTEND_INTEGRATION_SUMMARY.md  Multi-Agent House Meeting Design Document.md  Multi-Agent-Controller-Documentation.md  Multi-Agent-Playground-Design-Document.md  Multi-Agent-Playground-System-Design-Document.md  Multi-Agent-Playground-System-Design.md  Object-Centric-Architecture-Guide.md  REFACTOR.md  TAG_Advanced_Interactible_Object_Design_Strategy.md  TAG_Interactible_Object_Design_Strategy.md  TAG_Realistic_Object_Design_Document.md  (+9 more)
(+1115 files in other folders)
