[project]
name = "multi-agent-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "kani==1.5.1",
    "openai==1.99.9",
    "psutil>=7.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyright>=1.1.403",
    "python-dotenv==1.0.0",
    "pyyaml>=6.0.2",
    "regex==2025.7.34",
    "requests==2.32.4",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "tiktoken==0.11.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
